# Raylib-Sonic-SMS-Example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Assets/: icon.ase  sonic.ase
Assets/Darwin/: Info.plist.in
Assets/Linux/: Sonic The Hedgehog (SMS).desktop
CMake/: GetRaylib.cmake  MakeAppBundle.cmake
Source/: Game.c  Scene.c
Source/Include/: Globals.h  Player.h  Scene.h  Scenes.h
Source/Include/Scenes/: TestAreaScene.h
Source/Scenes/: TestAreaScene.c
